[metadata]
name = streamsuperlit
version = 0.10.0
author = Rouhollah Abolhasani
author_email = roohi.abol@gmail.com
description = An MVC framework on top of the popular date-driven dashboard, streamlit
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = http://192.168.1.5:82/dovelle/divar-analysis-dashboard.git
project_urls =
    repository = http://192.168.1.5:82/dovelle/divar-analysis-dashboard.git
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src